fixed bugs with top navbar on tablets and buttons position

--- a/steepshot_io/static/css/main.css
+++ b/steepshot_io/static/css/main.css
@@ -147,6 +147,11 @@ body {
     margin:0;
     font-weight: bold;
     float: right;
+    padding: 0;
+}
+
+li#st-blog {
+    margin: 0 !important;
 }
 
 #menu li {
@@ -255,8 +260,8 @@ a {
 }
 
 .btpg2 {
-    margin-left:45% !important;
-    top:520px !important;
+    margin-left: 48% !important;
+    top: 490px !important;
 }
 
 #mimg img, #mimg2 img, #mimg3 img {
@@ -696,7 +701,7 @@ input:focus {
     font-style: normal;
     font-weight: 600 !important;
     position: fixed;
-    bottom: 50px;
+    bottom: 25px;
     z-index: 12;
 }
 
@@ -966,7 +971,7 @@ input:focus {
 
     h1 {
         font-size: 25px;
-        margin: 3% auto;
+        margin: 2% auto;
     }
 
     h2 {
@@ -1067,13 +1072,12 @@ input:focus {
     }
 
     #buttons {
-        border:none;
+        border: none;
         text-align: center;
         width: 100%;
-        height:auto;
+        height: 100px;
         position: relative;
-        top:auto !important;
-        display: none;
+        top: auto;
     }
 
     #buttons p {
@@ -1102,7 +1106,7 @@ input:focus {
         width: 90%;
         text-align: center;
         margin: 0 auto;
-        opacity: 0;
+        opacity: 1;
         transition: 0.3s;
     }
 
@@ -1112,8 +1116,6 @@ input:focus {
         background-size:100%;
     }
 
-    /******************************************
-    *******************************************/
     #request-form {
         margin-top: 15vh;
     }
@@ -1126,9 +1128,6 @@ input:focus {
         margin: 35px auto;
     }
 
-    /******************************************
-    *******************************************/
-
     #panel2 {
         width: 90%;
         margin: 13% auto 0;
@@ -1137,7 +1136,7 @@ input:focus {
 
     .textbox1 {
         position: relative!important;
-        margin-top: 28%;
+        margin-top: 20%;
     }
 
     .backtext {
